--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,7 +111,7 @@
   }
 
   .spinner {
-    margin: 3.2rem auto 1.6rem;
+    
     width: 60px;
     aspect-ratio: 1;
     border-radius: 50%;
@@ -250,6 +250,24 @@ table td {
   top: 76px;
   width: 4px;
   background-color: rgb(var(--color-secondary-200));
+}
+
+.navLink{
+  position: relative;
+  text-decoration: none;
+  color: rgb(var(--color-secondary-900));
+  
+}
+
+.navLink::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(var(--color-secondary-900));
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: all 0.6s ease;
 }
 
 @media (max-width: 640px) {
